# cam-server

./: .gitignore  Cargo.toml  calibration.npy  shell.nix
src/: config.rs  ekf.rs  main.rs  obsmat.rs  util.rs  visualization.rs
src/net/: mod.rs
src/net/rtp/: #tag_stream_ext.rs#  tagstream_ext.rs
src/net/server/: cam_conn.rs  cam_ctn.rs  mod.rs  proto.rs
src/net/server/cam_conn/: mod.rs
src/net/server/cam_ctn/: tcp.rs  udp.rs
src/net/server/proto/: raw.rs  rtp.rs  ts_custom.rs
src/network/: client.rs  layers.rs  mod.rs  server.rs
src/network/rtp/: mod.rs  tagstream_ext.rs
src/obsmat/: mod.rs
src/tag_detector/: detector.rs  image.rs  mod.rs  tag.rs
tests/: tag_detection.rs
